# oscar-debain

./: Makefile.am  Makefile.in  README  acinclude.m4  autogen.sh  configure  configure.in  create_local_debian_repository  install_cluster  install_cluster.deb  install_cluster.rpm  newfile.2835  update_local_debian_repository
Deb/: Makefile.am  Makefile.options  PkgInfo.pm  Repository.pm  install_kernel_in_image  sources.list
RPM/: Makefile.am  PkgInfo.pm  Repository.pm
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: Makefile.am  Makefile.in  README
images/: Makefile.am  Makefile.in
lib/: Makefile.in
lib/OSCAR/: Configurator.pm  Distro.pm  Help.pm  MAC.pm  Makefile.am  Makefile.in  Package.pm  PackageBest.pm  PackageInUn.pm
lib/Qt/: Makefile.in
lib/Tk/: Makefile.in
oscarsamples/: Makefile.am  Makefile.in  debian-3.1-i386.rpmlist
scripts/: Makefile.am  Makefile.in  install_server  mac_collector  macinfo2sis  opd  oscar_wizard  ping_clients  post_rpm_install  setup_pxe  ssh_install  wizard_prep
share/: Makefile.am  Makefile.in
share/prereqs/: Makefile.am  Makefile.in  order.deb.txt
share/prereqs/packman/Debs/: Makefile.am  Makefile.in  packmandepman_1.3.4-6.dsc  packmandepman_1.3.4-6_i386.deb  packmandepman_1.3.4-7_i386.deb
share/serverlists/: Makefile.am  Makefile.in
src/: Makefile.am  Makefile.in
src/Installer/: InstallerErrorDialog.pm  InstallerImages.pm  Makefile.in
src/NodeGroupLister/: Makefile.in  NodeGroupLister.pl  NodeGroupLister.pm
src/NodeMgmt/: Makefile.in  NodeMgmtDialog.pl  NodeMgmtDialog.pm  (+1 more)
testing/: Makefile.am  Makefile.in  pbs_test  ssh_user_tests  testprint
(+73 files in other folders)
