# -*- makefile -*-
#
# Copyright (c) 2005 INRIA.
#		All rights reserved.
# 
# $Id$
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include ./Makefile.options

oscar_SCRIPTS		= \
			Repository.pm \
			PkgInfo.pm

EXTRA_DIST		= $(oscar_SCRIPTS)
