# -*- makefile -*-
#
# Copyright (c) 2005 INRIA.
#		All rights reserved.
# 
# $Id$
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include ./Makefile.options

oscar_SCRIPTS		= \
			sources.list \
			Repository.pm \
			PkgInfo.pm \
			install_kernel_in_image

EXTRA_DIST		= $(oscar_SCRIPTS)
