# -*- makefile -*-
#
# Copyright (c) 2002-2004 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id$
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA		= packmandepman_1.3.4-7_i386.deb

EXTRA_DIST		= $(oscar_DATA)

